Added link to source

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -196,5 +196,13 @@
           alt="State Profile: Maine" title="State Profile: Maine">
         </map>
       </angular-maphilight>
+
+    <br>
+    <p>
+      Created by Jessamyn Smith
+      <br>
+      <a href="https://github.com/jessamynsmith/ionic-maphilight-example">View the source
+        on GitHub</a>
+    </p>
   </ion-content>
 </ion-view>
