--- a/www/templates/maps.html
+++ b/www/templates/maps.html
@@ -5,5 +5,13 @@
         {{map.title}}
       </ion-item>
     </ion-list>
+
+    <br>
+    <p>
+      Created by Jessamyn Smith
+      <br>
+      <a href="https://github.com/jessamynsmith/ionic-maphilight-example">View the source
+        on GitHub</a>
+    </p>
   </ion-content>
 </ion-view>
